--- a/mon-pix/app/templates/components/new-information.hbs
+++ b/mon-pix/app/templates/components/new-information.hbs
@@ -11,6 +11,14 @@
       {{#if @linkText}}
         {{#if (eq @linkDisplayType 'button')}}
           <LinkTo @route="{{@linkTo}}" class="new-information-content-text__button button button--extra-thin button--link">{{@linkText}}</LinkTo>
+        {{else}}
+          <a href="{{@linkTo}}"
+             target="_blank"
+             rel="noopener noreferrer"
+             class="new-information-content-text__link {{@textColorClass}}">
+            <FaIcon @icon='arrow-right' />
+            {{@linkText}}
+          </a>
         {{/if}}
       {{/if}}
     </div>
