[ORGA] Set translation in campaign list page

--- a/orga/app/templates/authenticated/campaigns/list.hbs
+++ b/orga/app/templates/authenticated/campaigns/list.hbs
@@ -3,10 +3,30 @@
     <Routes::Authenticated::Campaign::NoCampaignPanel />
   {{else}}
     <div class="list-campaigns-page__header-page">
-      <button role="tab" type="submit" class="list-campaigns-page__tab {{unless this.isArchived  'list-campaigns-page__tab--active' }}" aria-selected="{{ not this.isArchived }}" aria-label="Afficher les campagnes actives" {{on 'click' (fn this.updateCampaignStatus null)}}>Actives</button>
-      <button role="tab" type="submit" class="list-campaigns-page__tab {{if this.isArchived 'list-campaigns-page__tab--active' }}" aria-selected="{{ this.isArchived }}" aria-label="Afficher les campagnes archivées" {{on 'click' (fn this.updateCampaignStatus 'archived')}}>Archivées</button>
+      <button
+        role="tab"
+        type="submit"
+        class="list-campaigns-page__tab {{unless this.isArchived  'list-campaigns-page__tab--active' }}"
+        aria-selected="{{ not this.isArchived }}"
+        aria-label={{t 'pages.campaigns-list.action.ongoing.aria-label'}}
+        {{on 'click' (fn this.updateCampaignStatus null)}}
+      >
+        {{t 'pages.campaigns-list.action.ongoing.label'}}
+      </button>
+      <button
+        role="tab"
+        type="submit"
+        class="list-campaigns-page__tab {{if this.isArchived 'list-campaigns-page__tab--active' }}"
+        aria-selected="{{ this.isArchived }}"
+        aria-label={{t 'pages.campaigns-list.action.archived.aria-label'}}
+        {{on 'click' (fn this.updateCampaignStatus 'archived')}}
+      >
+        {{t 'pages.campaigns-list.action.archived.label'}}
+      </button>
       <div role="tabpanel" class="list-campaigns-page__create-campaign-button">
-        <LinkTo @route="authenticated.campaigns.new" class="button button--link">Créer une campagne</LinkTo>
+        <LinkTo @route="authenticated.campaigns.new" class="button button--link">
+         {{t 'pages.campaigns-list.action.create'}}
+        </LinkTo>
       </div>
     </div>
     <Routes::Authenticated::Campaign::List
