--- a/mon-pix/app/templates/components/new-information.hbs
+++ b/mon-pix/app/templates/components/new-information.hbs
@@ -16,8 +16,7 @@
              target="_blank"
              rel="noopener noreferrer"
              class="new-information-content-text__link {{@textColorClass}}">
-            <FaIcon @icon='arrow-right' />
-            {{@linkText}}
+            <FaIcon @icon='arrow-right' />{{@linkText}}
           </a>
         {{/if}}
       {{/if}}
