Hide new dashboard banner's link when domain is .org

--- a/mon-pix/app/components/dashboard/content.hbs
+++ b/mon-pix/app/components/dashboard/content.hbs
@@ -7,8 +7,8 @@
                       @image="/images/discovery_TDB_pix.svg"
                       @backgroundColorClass="new-information--blue-gradient-background"
                       @textColorClass="new-information--white-text"
-                      @linkText="{{t 'pages.dashboard.presentation.link.text'}}"
-                      @linkTo="{{t 'pages.dashboard.presentation.link.url'}}"
+                      @linkText="{{this.newDashboardInfoLink.text}}"
+                      @linkTo="{{this.newDashboardInfoLink.url}}"
                       @closeaction={{this.closeInformationAboutNewDashboard}}
       />
     </section>
@@ -28,8 +28,8 @@
                         @image="/images/discovery_TDB_pix.svg"
                         @backgroundColorClass="new-information--blue-gradient-background"
                         @textColorClass="new-information--white-text"
-                        @linkText="{{t 'pages.dashboard.presentation.link.text'}}"
-                        @linkTo="{{t 'pages.dashboard.presentation.link.url'}}"
+                        @linkText="{{this.newDashboardInfoLink.text}}"
+                        @linkTo="{{this.newDashboardInfoLink.url}}"
                         @closeaction={{this.closeInformationAboutNewDashboard}}
         />
       </section>
