[ORGA] Refactor previouspagebutton

--- a/orga/app/components/routes/authenticated/campaign/profile/details.hbs
+++ b/orga/app/components/routes/authenticated/campaign/profile/details.hbs
@@ -3,7 +3,8 @@
    <PreviousPageButton
      @route="authenticated.campaigns.campaign.profiles"
      @routeId={{@campaign.id}}
-     @ariaLabel="Retourner au détail de la campagne"
+     @backButtonAriaLabel="Retourner au détail de la campagne"
+     aria-label="Nom de la campagne"
    >
     {{@campaign.name}}
    </PreviousPageButton>
