--- a/orga/app/components/previous-page-button.hbs
+++ b/orga/app/components/previous-page-button.hbs
@@ -1,14 +1,14 @@
 <div class="previous-page-button">
   <PixIconButton
     @icon="arrow-left"
-    aria-label={{@ariaLabel}}
+    aria-label={{@backButtonAriaLabel}}
     class="previous-page-button__return-button"
     @triggerAction={{this.goToPage}}
     @withBackground={{false}}
     @size="small"
     @color="dark-grey"
   />
-  <h1 class="back-title">
+  <h1 class="back-title" ...attributes>
     {{yield}}
   </h1>
 </div>
