--- a/mon-pix/app/templates/components/challenge-item-qcm.hbs
+++ b/mon-pix/app/templates/components/challenge-item-qcm.hbs
@@ -1,7 +1,6 @@
 {{!-- template-lint-disable no-action --}}
 <article class="challenge-item"
-         data-challenge-id="{{@challenge.id}}"
-         {{will-destroy (action this.cancelTimer)}}>
+         data-challenge-id="{{@challenge.id}}">
 
   {{#if this.isTimedChallengeWithoutAnswer}}
     {{#unless this.hasUserConfirmedWarning}}
@@ -35,7 +34,8 @@
 
         {{#if this.displayTimer}}
           <div class="timeout-gauge-wrapper">
-            <TimeoutGauge @allottedTime={{@challenge.timer}} />
+            <TimeoutGauge @allottedTime={{@challenge.timer}}
+                          @updateChallengeTimedOut={{action "updateChallengeTimedOut"}} />
           </div>
         {{/if}}
       </div>
