--- a/mon-pix/app/templates/components/challenge-item-qroc.hbs
+++ b/mon-pix/app/templates/components/challenge-item-qroc.hbs
@@ -37,7 +37,8 @@
 
           {{#if this.displayTimer}}
             <div class="timeout-gauge-wrapper">
-              <TimeoutGauge @allottedTime={{@challenge.timer}} />
+              <TimeoutGauge @allottedTime={{@challenge.timer}}
+                            @updateChallengeTimedOut={{action "updateChallengeTimedOut"}}/>
             </div>
           {{/if}}
         </div>
