--- a/mon-pix/app/templates/components/challenge-item-qcm.hbs
+++ b/mon-pix/app/templates/components/challenge-item-qcm.hbs
@@ -1,15 +1,14 @@
-{{!-- template-lint-disable no-action --}}
 <article class="challenge-item"
          data-challenge-id="{{@challenge.id}}">
 
   {{#if this.isTimedChallengeWithoutAnswer}}
     {{#unless this.hasUserConfirmedWarning}}
-      <TimedChallengeInstructions @hasUserConfirmedWarning={{action "setUserConfirmation"}} @time={{@challenge.timer}} />
+      <TimedChallengeInstructions @hasUserConfirmedWarning={{this.setUserConfirmation}} @time={{@challenge.timer}} />
     {{/unless}}
   {{/if}}
 
   {{#if this.displayChallenge}}
-    <form {{action "validateAnswer" on="submit"}} class="rounded-panel">
+    <form {{on "submit" this.validateAnswer}} class="rounded-panel">
       <ChallengeStatement @challenge={{@challenge}} @assessment={{@assessment}} />
 
       <div class="rounded-panel__row challenge-response {{if @answer 'challenge-response--locked'}}  {{if this.hasChallengeTimedOut 'challenge-response--locked'}}">
@@ -18,7 +17,7 @@
           <QcmProposals @answer={{@answer}}
                         @answerValue={{@answer.value}}
                         @proposals={{@challenge.proposals}}
-                        @answerChanged={{action "answerChanged"}} />
+                        @answerChanged={{this.answerChanged}} />
         </div>
 
         {{#if @answer}}
@@ -35,7 +34,7 @@
         {{#if this.displayTimer}}
           <div class="timeout-gauge-wrapper">
             <TimeoutGauge @allottedTime={{@challenge.timer}}
-                          @updateChallengeTimedOut={{action "updateChallengeTimedOut"}} />
+                          @updateChallengeTimedOut={{this.updateChallengeTimedOut}} />
           </div>
         {{/if}}
       </div>
@@ -49,9 +48,9 @@
       {{#if @assessment}}
         <ChallengeActions @challenge={{@challenge}}
                           @answer={{@answer}}
-                          @resumeAssessment={{action "resumeAssessment"}}
-                          @validateAnswer={{action "validateAnswer"}}
-                          @skipChallenge={{action "skipChallenge"}}
+                          @resumeAssessment={{this.resumeAssessment}}
+                          @validateAnswer={{this.validateAnswer}}
+                          @skipChallenge={{this.skipChallenge}}
                           @isValidateButtonEnabled={{this.isValidateButtonEnabled}}
                           @hasChallengeTimedOut={{this.hasChallengeTimedOut}}
                           @isSkipButtonEnabled={{this.isSkipButtonEnabled}}/>
