--- a/orga/app/templates/authenticated/campaigns/campaign/profiles.hbs
+++ b/orga/app/templates/authenticated/campaigns/campaign/profiles.hbs
@@ -4,5 +4,5 @@
   @goToProfilePage={{this.goToProfilePage}}
   @triggerFiltering={{this.triggerFiltering}}
   @selectedDivisions={{this.divisions}}
+  @resetFiltering={{this.resetFiltering}}
 />
-
