[APP] Hide header menu items for anonymous users

--- a/mon-pix/app/templates/components/navbar-desktop-header.hbs
+++ b/mon-pix/app/templates/components/navbar-desktop-header.hbs
@@ -11,7 +11,7 @@
       </div>
     </div>
 
-    {{#if this.isUserLogged}}
+    {{#if this.showHeaderMenuItem}}
       <nav class="navbar-desktop-header-container__menu">
         <ul class="navbar-desktop-header-menu__list">
           {{#if this.showDashboard}}
