[APP] Hide warning message and connected title for anonymous users

--- a/mon-pix/app/templates/fill-in-campaign-code.hbs
+++ b/mon-pix/app/templates/fill-in-campaign-code.hbs
@@ -44,7 +44,7 @@
           </div>
         </form>
 
-        {{#if this.isUserAuthenticated}}
+        {{#if this.showWarningMessage}}
           <div class="fill-in-campaign-code__warning">
             <span>{{this.warningMessage}}</span>
             <a href="#" class="link" {{action this.disconnect}}>{{t 'pages.fill-in-campaign-code.warning-message-logout'}}</a>
