--- a/mon-pix/app/templates/components/progression-gauge.hbs
+++ b/mon-pix/app/templates/components/progression-gauge.hbs
@@ -1,8 +1,7 @@
-{{!-- template-lint-disable no-implicit-this  --}}
-<div class={{concat "progression-gauge " progressionClass}} style={{totalGaugeStyle}}>
-  <div class="progression-gauge__marker" style={{valueGaugeStyle}}></div>
+<div class={{concat "progression-gauge " @progressionClass}} style={{this.totalGaugeStyle}}>
+  <div class="progression-gauge__marker" style={{this.valueGaugeStyle}}></div>
 
-  <div class="progression-gauge__tooltip-wrapper" style={{valueGaugeStyle}}>
+  <div class="progression-gauge__tooltip-wrapper" style={{this.valueGaugeStyle}}>
     <div class="progression-gauge__tooltip">{{yield}}</div>
   </div>
 </div>
