--- a/mon-pix/app/components/routes/campaigns/assessment/skill-review.hbs
+++ b/mon-pix/app/components/routes/campaigns/assessment/skill-review.hbs
@@ -58,10 +58,17 @@
                       'pages.profile.resume-campaign-banner.actions.resume'}}</LinkTo>
             </div>
           {{else}}
-            <CampaignShareButton
-                    @isShared={{@model.campaignParticipation.isShared}}
-                    @shareCampaignParticipation={{this.shareCampaignParticipation}}
-            />
+            {{#if @model.campaignParticipation.campaign.isForAbsoluteNovice}}
+              <LinkTo @route="logout"
+                      class="skill-review-share__back-to-home link" data-link-to-sign-up>
+                {{t 'pages.skill-review.actions.continue'}}
+              </LinkTo>
+            {{else}}
+              <CampaignShareButton
+                      @isShared={{@model.campaignParticipation.isShared}}
+                      @shareCampaignParticipation={{this.shareCampaignParticipation}}
+              />
+            {{/if}}
           {{/if}}
         </div>
       </div>
